Make question_answer pages

--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -48,7 +48,7 @@
             = space
             span 学習データ
         li class="nav-item"
-          = active_link_to bot_question_answers_path(@bot), class: 'nav-link', active: :exact do
+          = active_link_to bot_question_answers_path(@bot), class: 'nav-link' do
             = material_icon 'question_answer', class: 'text-gray-light mi-sm'
             = space
             span Q&A
