--- a/app/views/question_answers/_summary_card.html.slim
+++ b/app/views/question_answers/_summary_card.html.slim
@@ -1,9 +1,9 @@
-.panel.panel-default
-  .panel-body
+.card.mb-4
+  .card-block
     - if question_answer.topic_tags.any?
       .row style="padding-bottom:15px;": .col-sm-12
         - question_answer.topic_tags.each do |topic_tag|
-          span.label.label-primary= topic_tag.name
+          span.badge.badge-primary= topic_tag.name
           = space 2
     .row
       .col-sm-6
@@ -25,7 +25,7 @@
                     small.text-muted 添付ファイル
                     br
                     = link_to answer_file.read_attribute(:file), answer_file.file_url, target: '_blank'
-  .panel-footer
+  .card-footer
     .row
       .col-sm-8
         small.text-muted ID：#{question_answer.id}
@@ -35,12 +35,12 @@
         small.text-muted 更新日時：#{l question_answer.updated_at, format: :short}
       .col-sm-4.text-right
         - unless local_assigns[:hide_buttons]
-          = link_to edit_bot_question_answer_path(bot, question_answer), class: 'btn btn-default btn-xs', data: { event_name: 'Open edit question answer', bot_id: bot.id, bot_name: bot.name } do
-            = material_icon 'edit'
+          = link_to edit_bot_question_answer_path(bot, question_answer), class: 'btn btn-secondary btn-sm', data: { event_name: 'Open edit question answer', bot_id: bot.id, bot_name: bot.name } do
+            = material_icon 'edit', class: 'mi-xs'
             = space
             span 編集
           = space 3
-          = link_to bot_question_answer_path(bot, question_answer), class: 'btn btn-danger btn-xs', data: { confirm: '本当に削除してよろしいですか？', method: :delete, event_name: 'Delete question answer', bot_id: bot.id, bot_name: bot.name } do
-            = material_icon 'delete'
+          = link_to bot_question_answer_path(bot, question_answer), class: 'btn btn-danger btn-sm', data: { confirm: '本当に削除してよろしいですか？', method: :delete, event_name: 'Delete question answer', bot_id: bot.id, bot_name: bot.name } do
+            = material_icon 'delete', class: 'mi-xs'
             = space
             span 削除
