--- a/app/views/admin/word_mappings/new.html.slim
+++ b/app/views/admin/word_mappings/new.html.slim
@@ -1,6 +1,9 @@
-.row: .col-6.offset-3
+.container: .row: .col-8.offset-2
   .mt-5.mb-4
-    h4 システム共通同義語 新規作成
-    br
+    .mb-3= link_to admin_word_mappings_path, class: 'text-muted' do
+      = material_icon 'keyboard_arrow_left', class: 'mi-xs'
+      = space
+      span 一覧へ戻る
+    h4.mb-3 システム共通同義語 新規作成
 
-    = render 'word_mappings/form', { resource: [:admin, @word_mapping] }
+    = render 'form', { resource: [:admin, @word_mapping] }
