Make word_mapping pages

--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -61,7 +61,7 @@
           = active_link_to bot_word_mappings_path(@bot), class: 'nav-link', active: :exact do
             = material_icon 'book', class: 'text-gray-light mi-sm'
             = space
-            span 辞書
+            span 同義語
         /li class="nav-item dropdown"
           a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button"
             span その他
