--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <% if object.errors.any? %>
   <div class="alert alert-danger">
-  <ul class="errors">
+  <ul class="errors mb-0">
     <% object.errors.full_messages.each do |msg| %>
     <li><%= msg %></li>
     <% end %>
