--- a/app/views/word_mappings/edit.html.slim
+++ b/app/views/word_mappings/edit.html.slim
@@ -1,6 +1,2 @@
-h1 同義語編集
-
-= render 'form', { resource: [@bot, @word_mapping] }
-
-br
-= link_to '戻る', bot_word_mappings_path(@bot), class: 'btn btn-default', data: { event_name: 'Back to word mapping index', word_mapping_id: @word_mapping.id }
+= render layout: 'bots/layout' do
+  = render 'form'
