Tweak chat page

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,4 +1,9 @@
+/*
+ *= require toastr
+ */
+
 @import 'bootstrap-v4.0.0-alpha.6-scss/bootstrap';
+
 
 html {
   height: 100%;
@@ -24,5 +29,6 @@ body {
 }
 
 @import 'app/common/variables';
+@import 'app/common/keyframes';
 @import 'app/helpers/*';
 @import 'app/modules/**/*';
