--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -52,7 +52,8 @@
             = space
             span 学習データ
         li class="nav-item"
-          = active_link_to bot_question_answers_path(@bot), class: 'nav-link' do
+          = active_link_to bot_question_answers_path(@bot), class: 'nav-link',
+            active: /^\/bots\/[0-9]+\/(question_answers|topic_tags)/ do
             = material_icon 'question_answer', class: 'text-gray-light mi-sm'
             = space
             span Q&A
