--- a/app/views/question_answers/_search_form.html.slim
+++ b/app/views/question_answers/_search_form.html.slim
@@ -1,6 +1,6 @@
 .d-flex.justify-content-between.bg-faded.mb-3.p-2
   = form_tag action_url, method: :get, class: 'form-inline d-flex justify-content-between', data: { event_name: 'Search question answer', bot_id: bot.id, bot_name: bot.name } do
-    = collection_select :topic, :id, topic_tags_for_select(@bot), :id, :name, { prompt: "-- トピックタグで絞込 --", selected: (@topic_id.to_i if @topic_id.present?) }, class: 'form-control'
+    = collection_select :topic, :id, topic_tags_for_select(@bot), :id, :name, { prompt: "-- トピックタグで絞込 --", selected: (@topic_id.to_i if @topic_id.present?) }, class: 'form-control', style: 'max-width:200px'
     = space
     .input-group
       = text_field_tag :keyword, params[:keyword], class: "search-question-answer form-control", placeholder: "検索ワードを入力"
@@ -10,19 +10,7 @@
       = space
       = link_to '✕ 検索を解除', action_url, class: 'btn btn-link'
 
-  .form-inline
-    span 順序：
-    select.form-control data-role="url-switcher" data-event="Sort question answers" data-bot-id=bot.id data-bot-name=bot.name
-      option value=sorting_url('created_at desc') selected=(sort.blank? || sort == "created_at desc")
-        |作成日時の新しい順
-      option value=sorting_url('created_at asc') selected=(sort == "created_at asc")
-        |作成日時の古い順
-      option value=sorting_url('updated_at desc') selected=(sort == "updated_at desc")
-        |更新日時の新しい順
-      option value=sorting_url('updated_at asc') selected=(sort == "updated_at asc")
-        |更新日時の古い順
-
-    = space 2
-
   div
-    = link_to '新規登録', new_bot_question_answer_path(@bot), class: 'btn btn-success', data: { event_name: 'Open new question answer', bot_id: @bot.id, bot_name: @bot.name }
+    = link_to 'トピックタグ管理', bot_topic_tags_path(@bot), class: 'btn btn-secondary'
+    = space
+    = link_to 'Q&A新規登録', new_bot_question_answer_path(@bot), class: 'btn btn-success', data: { event_name: 'Open new question answer', bot_id: @bot.id, bot_name: @bot.name }
